[tool.poetry]
name = "bahirehasab-bot"
version = "0.1.0"
description = ""
authors = ["hunderaweke <hunderaweke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.5"
aiogram = "2.25.1"
fastapi = "^0.103.1"
Pillow = "^10.0.0"
Pillow-PIL = "^0.1.dev0"
bahire-hasab = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
